--- a/requirements.txt
+++ b/requirements.txt
@@ -1,29 +1,31 @@
+aiodns==3.0.0
 aiohttp==3.8.4
 aiosignal==1.3.1
+aiosqlite==0.19.0
 async-timeout==4.0.2
-asyncpg==0.27.0
-attrs==22.2.0
-black==23.1.0
-charset-normalizer==3.0.1
+attrs==23.1.0
+black==23.3.0
+Brotli==1.0.9
+cffi==1.15.1
+charset-normalizer==3.1.0
 click==8.1.3
 decorator==5.1.1
-ffmpeg-python==0.2.0
 frozenlist==1.3.3
-future==0.18.3
 greenlet==2.0.2
 idna==3.4
-imageio-ffmpeg==0.4.8
 multidict==6.0.4
 mypy-extensions==1.0.0
-numpy==1.24.2
-orjson==3.8.6
-packaging==23.0
-pathspec==0.11.0
-platformdirs==3.0.0
-py-cord==2.4.0
-pydantic==1.10.5
-SQLAlchemy==2.0.4
+orjson==3.9.1
+packaging==23.1
+pathspec==0.11.1
+platformdirs==3.8.0
+py-cord==2.4.1
+pycares==4.3.0
+pycparser==2.21
+pydantic==1.10.9
+SQLAlchemy==2.0.17
 tomli==2.0.1
-typing-extensions==4.5.0
+typing-extensions==4.6.3
+uwuify==1.3.0
 validators==0.20.0
-yarl==1.8.2
+yarl==1.9.2
