--- a/requirements.txt
+++ b/requirements.txt
@@ -13,8 +13,10 @@ decorator==5.1.1
 frozenlist==1.3.3
 greenlet==2.0.2
 idna==3.4
+joblib==1.3.2
 multidict==6.0.4
 mypy-extensions==1.0.0
+nltk==3.8.1
 orjson==3.9.1
 packaging==23.1
 pathspec==0.11.1
@@ -23,9 +25,11 @@ py-cord==2.4.1
 pycares==4.3.0
 pycparser==2.21
 pydantic==1.10.9
+regex==2023.12.25
 SQLAlchemy==2.0.17
 tomli==2.0.1
-typing-extensions==4.6.3
+tqdm==4.66.1
+typing_extensions==4.6.3
 uwuify==1.3.0
 validators==0.20.0
 yarl==1.9.2
